--- a/index.html
+++ b/index.html
@@ -172,15 +172,6 @@
           coding, investing, and entrepreneurship. I enjoy full-stack web
           development and machine learning. Although I mainly use TypeScript, I
           also love to use JavaScript, Python, Java, and Flutter.
-          <br />
-          <br />
-          Check out my
-          <a
-            href="https://azamahmed.notion.site/Resume-2c63ca85adfd405a91a835de180bd22c"
-            target="_blank"
-            class="text-decoration-none"
-            >resume!</a
-          >
         </p>
       </div>
       <div class="card mt-5" data-aos="slide-up">
@@ -238,11 +229,11 @@
       <div class="card mt-5" data-aos="slide-up">
         <h3 class="sub-title">Volunteering</h3>
         <p class="sub-text">
-          <b>Verste: Machine Learning Research Contributor</b> During the summer, I wrote 50+ in-depth book reviews on both fiction and nonfiction books and earned 114.5 hours of community service. These book reviews were submitted to the library website and catalog.
+          <b>Mary Jacobs Library: Book Reviewer</b> During the summer, I wrote 50+ in-depth book reviews on both fiction and nonfiction books and earned 114.5 hours of community service. These book reviews were submitted to the library website and catalog.
         </p>
         <br />
         <p class="sub-text">
-          <b>Mary Jacobs Library: Book Reviewer</b> Bridging the technical education gap by reading machine learning research papers and simplifying them for students. Research papers often contain complex words that most high school students don't understand, but by volunteering at Verste and simplifying papers, I help anyone understand a research paper about machine learning.
+          <b>Verste: Machine Learning Research Contributor</b> Bridging the technical education gap by reading machine learning research papers and simplifying them for students. Research papers often contain complex words that most high school students don't understand, but by volunteering at Verste and simplifying papers, I help anyone understand a research paper about machine learning.
         </p>
       </div>
       <div class="card mt-5" data-aos="slide-up">
